Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/Key_Candidate_Alert__c.object-meta.xml
<CustomObject>
    <label>Key Candidate Alert</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Candidate Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>