Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/Alert_Email_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email_Date_Time__c</fullName>
    <label>Alert Email Date/Time</label>
    <type>DateTime</type>
</CustomField>