Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/Alert_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Email Sent</label>
    <type>Checkbox</type>
</CustomField>