Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Candidate Alerts</relationshipLabel>
    <relationshipName>Key_Candidate_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>