Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competency</label>
    <referenceTo>sirenum__Ticket__c</referenceTo>
    <relationshipLabel>Key Candidate Alerts</relationshipLabel>
    <relationshipName>Key_Candidate_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>