Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/Key_Candidate_Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Key_Candidate_Watchlist__c</fullName>
    <label>Key Candidate Watchlist</label>
    <referenceTo>Key_Candidate_Watchlist__c</referenceTo>
    <relationshipLabel>Key Candidate Alerts</relationshipLabel>
    <relationshipName>Key_Candidate_Alerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>