Frankbelford/uatv1ba/force-app/main/default/objects/Key_Candidate_Alert__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <formula>Key_Candidate_Watchlist__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerID</label>
    <type>Text</type>
</CustomField>